# azure-edge-extensions-aio-custom-vision-ai

./: README.md  custom-vision-mq-components.yaml
scripts/: service-principle.ps1  service-principle.ps1.sample.ps1  service-principle.sh
src/: custom-vision-mq-components.yaml
src/akri-usb-device-discovery-handler/: Cargo.toml  Dockerfile.discovery-handler  akri.yaml  discovery_handler.rs  main.rs
src/azure-video-indexer/: requirements.txt
src/azure-video-indexer/BlobTrigger/: __init__.py  function.py  search_client.py
src/camera-capture/: README.md  amd64.Dockerfile  arm32v7.Dockerfile  arm64v8.Dockerfile  install.sh
src/camera-capture/aio-dapr-deploy/: camera-capture-dapr-workload.yaml  camera-capture-mq-components.yaml
src/camera-capture/app/: annotation_parser.py  camera.proto  camera_capture.py  globals.py  grpc_video_stream.py  image_server.py  main.py  ring_buffer.py  video_stream.py
src/camera-capture/camera-client/: usbip_start.sh  usbip_stop.sh
src/camera-capture/camera-server/: usbip_start.sh  usbip_stop.sh  usbipd.service
src/image-classifier-service/: README.md  amd64.Dockerfile  arm32v7.Dockerfile  arm64v8.Dockerfile  module.json  readme.txt  requirements.txt
src/image-classifier-service/aio-dapr-deploy/: image-classifier-mq-components.yaml  image-classifier-service-dapr-workload.yaml
src/image-classifier-service/app/: app-amd64.py  app.py
src/sense-hat-display/: README.md  arm32v7.Dockerfile  arm64v8.Dockerfile  module.json
src/sense-hat-display/aio-dapr-deploy/: sense-hat-display-dapr-workload.yaml  (+1 more)
(+24 files in other folders)
